--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "apisauce": "^0.14.2",
     "bulma": "^0.6.1",
+    "immutability-helper": "^2.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-infinite-scroller": "^1.1.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
